chore(java): добавил вывод многострочных строк